--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/thekemkid/workaholic-ui",
   "dependencies": {
     "@matteo.collina/cocktail-control": "^1.2.0",
+    "bcryptjs": "^2.2.1",
     "chalk": "^1.1.1",
     "express": "^4.13.3",
     "fastparallel": "^1.6.1",
